画像の反映　TOPページ

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -29,6 +29,7 @@
                         <img
                             class="slider-2__bar"
                             src="./assets/images/TOP/point.png"
+                            src="./assets/images/TOP/point.png"
                             alt=""
                         />
                     </li>
@@ -47,8 +48,7 @@
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
                         <img
                             class="slider-2__bar"
-                            src="./assets/images/TOP/point2.png"
-                            alt=""
+                            alt="{{ 'point2.png' | asset_img_url: '3000x'}}"
                         />
                     </li>
                     <li class="slider-2__item slider-2__item03">
@@ -64,7 +64,7 @@
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
                         <img
                             class="slider-2__bar"
-                            src="./assets/images/TOP/point.png"
+                            src="{{ 'point.png' | asset_img_url: '3000x'}}"
                             alt=""
                         />
                     </li>
@@ -81,7 +81,7 @@
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
                         <img
                             class="slider-2__bar"
-                            src="./assets/images/TOP/point2.png"
+                            src="{{ 'point2.png' | asset_img_url: '3000x'}}"
                             alt=""
                         />
                     </li>
@@ -110,14 +110,14 @@
             <article class="media">
                 <figure class="media__img">
                     <img
-                        src="./assets/images/TOP/golf-originalCourse-pc.jpg"
+                        src="{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}"
                         width="513"
                         height="311"
                         alt="戦略性に富むオリジナルコース"
                         class="media__img--pc"
                     />
                     <img
-                        src="./assets/images/TOP/golf-originalCourse-sp.jpg"
+                        src="{{ 'golf-originalCourse-sp.jpg' | asset_img_url: '3000x'}}"
                         width="513"
                         height="311"
                         alt="戦略性に富むオリジナルコース"
@@ -148,7 +148,7 @@
             <article class="media media__reverse">
                 <figure class="media__img">
                     <img
-                        src="./assets/images/TOP/loge-villa-pc.jpg"
+                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
                         width="513"
                         height="311"
                         alt="戦略性に富むオリジナルコース"
@@ -188,7 +188,8 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="./assets/images/TOP/loge-villa.jpg"
+                                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
+
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
@@ -201,7 +202,8 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="./assets/images/TOP/loge-villa.jpg"
+                                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
+
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
@@ -214,7 +216,8 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="./assets/images/TOP/loge-villa.jpg"
+                                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
+
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
@@ -227,7 +230,8 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="./assets/images/TOP/loge-villa.jpg"
+                                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
+
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
