--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -22,7 +22,7 @@
 
         {{ 'slick.css' | asset_url | stylesheet_tag }}
         {{ 'slick-theme.css' | asset_url | stylesheet_tag }}
-        {{ 'main.css.liqid' | asset_url | stylesheet_tag }}
+        {{ 'main.css.liquid' | asset_url | stylesheet_tag }}
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
