画像の反映　TOPページ

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -41,7 +41,7 @@
 {{ content_for_layout }}
 
 
-    
+    {% section 'footer' %}
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         {{ 'slick.min.js' | asset_url | script_tag }}
