cssの読み込みエラー解消

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -9,7 +9,9 @@
                 <h2 class="siteLogo">
                     <a href="">
                         <img
-                            src="./assets/images/siteLogo-sp.png"
+                            
+                            src="{{ 'siteLogo-sp.png' | asset_img_url: '1200x'}}"
+                            
                             alt="津カントリー倶楽部"
                             class="siteLogo__img"
                         />
