cssの読み込みエラー解消

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -9,9 +9,8 @@
                 <h2 class="siteLogo">
                     <a href="">
                         <img
-                            
-                            
-                            
+
+                            src="{{ 'siteLogo-sp.png' | asset_img_url: '1200x'}}"
                             alt="津カントリー倶楽部"
                             class="siteLogo__img"
                         />
