cssの読み込みエラー解消

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -9,7 +9,6 @@
                 <h2 class="siteLogo">
                     <a href="">
                         <img
-
                             src="{{ 'siteLogo-sp.png' | asset_img_url: '1200x'}}"
                             alt="津カントリー倶楽部"
                             class="siteLogo__img"
@@ -81,6 +80,7 @@
                     <h1 class="siteLogo">
                         <img
                             src="./assets/images/siteLogo.png"
+                            src="{{ 'siteLogo.png' | asset_img_url: '1200x'}}"
                             alt="津カントリー倶楽部"
                             class="siteLogo__img"
                         />
