フッターの分割、反映

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -42,50 +42,8 @@
     
 
 
-    
-            <footer id="footer">
-            <a href="" class="sns"><span class="fa-facebook-square"></span></a>
-            <nav class="footerNav">
-                <ul class="menu">
-                    <li class="menu__item">
-                        <a href="#">メルマガ登録</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="">サイズガイド</a>
-                    </li>
+    {% section 'footer' %}
 
-                    <li class="menu__item">
-                        <a href="#">よくある質問</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">初めてのお客様</a>
-                    </li>
-
-                    <li class="menu__item">
-                        <a href="#">お問い合わせ</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">プラバシーポリシー</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">ヘルプ</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">利用規約</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">特許商取引法</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">会社概要</a>
-                    </li>
-                </ul>
-            </nav>
-
-            <p class="copyright">
-                <small class="copyright__txt">© TSU COUNTRY CLUB</small>
-            </p>
-        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         {{ 'slick.min.js' | asset_url | script_tag }}
