フッターの分割、反映

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -28,8 +28,7 @@
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
                         <img
                             class="slider-2__bar"
-                            src="./assets/images/TOP/point.png"
-                            src="./assets/images/TOP/point.png"
+                            src="{{'point.png | asset_img_url: '2000x'}}"
                             alt=""
                         />
                     </li>
@@ -100,7 +99,7 @@
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
                         <img
                             class="slider-2__bar"
-                            src="./assets/images/TOP/point.png"
+                            src="{{'point.png | asset_img_url: '2000x'}}"
                             alt=""
                         />
                     </li>
