bodyタグの出し分け処理

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/hsd2kyh.css" />
         <title>津カントリー倶楽部</title>
     </head>
-    {%if template =! 'index'%}
+    {%if template != 'index'%}
     <body class="postContainer">
     {% else %}
     <body>
