--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2383,7 +2383,7 @@ th {
     display: block;
     width: 100%;
     height: 373px;
-    
+    background: url("{{ 'pageVisual-pc.jpg' | asset_img_url: '3000x'}}") center center/cover no-repeat;
   }
   .pageVisual__textWrap{
     left: 50%;
