コース概要ページの追加

--- a/templates/page.course.liquid
+++ b/templates/page.course.liquid
@@ -10,8 +10,8 @@
 
             <section class="pageVisual pageVisual--res-price">
                 <div class="pageVisual__inner">
-                    <div class="pageVisual__img--pc res-price__img--pc"></div>
-                    <div class="pageVisual__img--sp res-price__img--sp"></div>
+                    <div class="pageVisual__img--pc"></div>
+                    <div class="pageVisual__img--sp"></div>
                     <div class="pageVisual__textWrap">
                         <h2 class="pageVisual__text--en">Course information</h2>
                         <h1 class="pageVisual__text--ja">コース概要</h1>
