headerのハンバーガーメニュー画像追加ハンバーガーメニュー画像追加

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -130,6 +130,9 @@
                     <a href="">
                         <img
                             src="./assets/images/siteLogo-sp.png"
+                            src="{{'siteLogo-sp.png' | asset_img_url: '2000x'}}"
+                            
+                            
                             alt="津カントリー倶楽部"
                             class="siteLogo__img"
                         />
