施設案内ページ分割

--- a/templates/page.facilites.liquid
+++ b/templates/page.facilites.liquid
@@ -16,7 +16,7 @@
                         <h2 class="pageVisual__text--en">
                             Facility information
                         </h2>
-                        <h1 class="pageVisual__text--ja">設備案内</h1>
+                        <h1 class="pageVisual__text--ja">施設案内</h1>
                     </div>
                 </div>
             </section>
