料金、予約の反映

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -129,7 +129,7 @@
                 <h2 class="siteLogo">
                     <a href="">
                         <img
-                            
+                            src="{{'siteLogo-sp.png' | asset_img_url: '2000x'}}"
                             
                             
                             alt="津カントリー倶楽部"
