--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -10,8 +10,8 @@
 
             <section class="pageVisual pageVisual--res-price">
                 <div class="pageVisual__inner">
-                    <div class="pageVisual__img--pc res-price__img--pc"></div>
-                    <div class="pageVisual__img--sp res-price__img--sp"></div>
+                    <div class="pageVisual__img--pc"></div>
+                    <div class="pageVisual__img--sp"></div>
                     <div class="pageVisual__textWrap">
                         <h2 class="pageVisual__text--en">Reserve / price</h2>
                         <h1 class="pageVisual__text--ja">ご予約 / 料金</h1>
