--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -187,7 +187,7 @@
             <nav class="globalNav-2">
                 <p class="pageLogo-pc">
                     <img
-                        src="./assets/images/pageLogo-pc.png"
+                        src="{{'pageLogo-pc.png' | asset_img_url: '2000x' }}"
                         alt="津カントリー倶楽部"
                     />
                 </p>
