記事ページの出力

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1909,7 +1909,7 @@ th {
   width: 100%;
   height: 45.625vw;
   margin: 0 auto 9.8vw;
-  background: url("{{ 'guidance.jpg' | asset_img_url: '3000x'}}") center center/cover no-repeat;
+  /* background: url("{{ 'guidance.jpg' | asset_img_url: '3000x'}}") center center/cover no-repeat; */
 }
 
 .heading-lv1 {
