記事ページ画像サイズ

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1907,7 +1907,8 @@ th {
 
 .guidance__img {
   width: 100%;
-  height: 45.625vw;
+  /* height: 45.625vw; */
+  height: auto;
   margin: 0 auto 9.8vw;
   /* background: url("{{ 'guidance.jpg' | asset_img_url: '3000x'}}") center center/cover no-repeat; */
 }
@@ -2956,7 +2957,8 @@ th{
     font-size: 1.25rem;
   }
   .guidance__img{
-    height: 470px;
+    /* height: 470px; */
+    height: auto;
     margin-bottom: 58px;
   }
   .heading-lv1{
@@ -3603,7 +3605,8 @@ th{
     font-size: 1.3888888889vw;
   }
   .guidance__img{
-    height: 32.6388888889vw;
+    /* height: 32.6388888889vw; */
+    height: auto;
     margin-bottom: 4.0277777778vw;
   }
   .heading-lv1{
