--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1913,6 +1913,12 @@ th {
   /* background: url("{{ 'guidance.jpg' | asset_img_url: '3000x'}}") center center/cover no-repeat; */
 }
 
+.guidance__img img{
+  width: 100%;
+  display: block; 
+  /* 横澤追加 4/14 */
+}
+
 .heading-lv1 {
   margin-bottom: 7.8vw;
   font-weight: bold;
