--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3808,4 +3808,28 @@ th{
 
 
 }
+
+.sec h2 {
+  text-align: center;
+  font-size: 1.5vw;
+  margin-bottom: 3vw;
+}
+
+@media (max-width: 1025px) {
+  .sec h2 {
+    font-size: 2.6vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .sec h2 {
+    font-size: 3.3vw;
+  }
+}
+
+@media (max-width: 500px) {
+  .sec h2 {
+    font-size: 15px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
