--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3707,6 +3707,7 @@ th{
   justify-content: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  display: flex;
 }
 
 .sec .collection-wrap .product_card {
