--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3833,4 +3833,180 @@ th{
     font-size: 15px;
   }
 }
+
+
+/* ボタンのcss */
+.Btn {
+  border: rgba(147, 147, 147, 0.3) solid 1px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  text-align: center;
+  font-size: 1.2vw;
+  width: 100%;
+  padding: 15px 0;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: ease .2s;
+  transition: ease .2s;
+}
+
+.Btn span {
+  position: relative;
+  z-index: 3;
+  /*z-indexの数値をあげて文字を背景よりも手前に表示*/
+  color: #939393;
+  -webkit-transition: ease .4s;
+  transition: ease .4s;
+}
+
+@media(max-width: 1025px){
+
+  .Btn {
+    font-size: 16px;
+  }
+}
+
+
+.Btn:hover span {
+  color: #fff;
+}
+
+.Btn-wrapper {
+  background: #fff;
+  color: #5c5c5c;
+  text-align: center;
+  padding: 14px 28px;
+  display: inline-block;
+}
+
+.Btn02 {
+  color: #fff;
+  background: #b7282e;
+  font-size: 1.1vw;
+  padding: 14px 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  margin: 0 auto;
+  width: 350px;
+  text-align: center;
+  margin-top: 20px;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: ease .2s;
+  transition: ease .2s;
+}
+
+
+
+@media(max-width: 1025px){
+  .Btn02{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 500px) {
+  .Btn02 {
+    margin-top: 2vw;
+    width: 100%;
+  }
+
+  .sec .Btn02{
+    width: 80%;
+  }
+
+  .Btn, .Btn02{
+    font-size: 13px;
+  }
+}
+
+.Btn02 span {
+  position: relative;
+  z-index: 3;
+  /*z-indexの数値をあげて文字を背景よりも手前に表示*/
+  color: #EFEBEB;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.Btn02 input{
+  background-color: transparent;
+}
+.Btn02:hover span,
+.Btn02:hover input {
+  color: #b7282e;
+}
+
+.Btn02:hover input{
+  color: #b7282e;
+  z-index: 3;
+}
+
+/*== 背景が流れる（左から右） */
+.bgleft02:before {
+  content: '';
+  /*絶対配置で位置を指定*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  /*色や形状*/
+  background: #EFEBEB;
+  /*背景色*/
+  width: 100%;
+  height: 100%;
+  /*アニメーション*/
+  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s, -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+  -webkit-transform-origin: right top;
+          transform-origin: right top;
+  border: 1px solid #b7282e;
+}
+
+.bgleft:before {
+  content: '';
+  /*絶対配置で位置を指定*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  /*色や形状*/
+  background: #b7282e;
+  /*背景色*/
+  width: 100%;
+  height: 100%;
+  /*アニメーション*/
+  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s, -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+  -webkit-transform-origin: right top;
+          transform-origin: right top;
+  border: 1px solid #b7282e;
+}
+
+/*hoverした際の形状*/
+.bgleft02:hover:before {
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+}
+
+/*hoverした際の形状*/
+.bgleft:hover:before {
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+}
+
 /*# sourceMappingURL=main.css.map */
